<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">250856555722821</string>
    <string name="fb_login_protocol_scheme">fb1138671626263284</string>
    <string name="app_name">My notes reminder</string>
    <string name="question_delete">are you sure you want to delete the note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">CANCEL</string>
    <string name="created">created at</string>
    <string name="check">this is a reminder you would be interested in</string>
    <string name="share_using">share using</string>
    <string name="file_save">item saved</string>
    <string name="action_settings">prefrences</string>
    <string name="error">something went wrong please try again later</string>
    <string name="save_before_exit">do you want to apply changes before exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="item_deleted">item  deleted</string>
    <string name="local">language</string>
    <string name="removeads">remove ads</string>
    <string name="currentlocale">english</string>
    <string name="privacy">privacy policy</string>
    <string name="please_add">please add title</string>
    <string name="please_add_items">no items found press + to add</string>
    <string name="exit">press again to exit</string>
    <string name="pattern_lock">Lock app with pattern</string>
    <string name="pattern">lock:</string>
    <string name="about_us">about us</string>
    <string name="Complete">Complete</string>
    <string name="Error">error</string>
    <string name="Upload">Save</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="please_draw">please draw pattern</string>
    <string name="change_pattern">change pattern</string>
    <string name="title_activity_pattern_switch">patternSwitch</string>
    <string name="password_correct">lock disabled</string>
    <string name="create_reminder">Create reminder</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="tit">Please add title first</string>
    <string name="add_img">Add image</string>
    <string name="action_search">Search</string>
    <string name="perm">Please enable all permissions for recording to work!!!</string>
    <string name="backups">backups</string>
    <string name="off">off</string>
    <string name="restore">Restore</string>
    <string name="press">Press here to view reminder</string>
    <string name="add_widget">Add widget</string>
    <string name="notes_widget">Notes widget</string>
    <string name="no_items">No items found</string>
    <string name="accounts">Account</string>
    <string name="not_logged">sign in</string>
    <string name="sign_out">sign out</string>
    <string name="email_sign_in">Sign in with Email</string>
    <string name="privacy_policy">By signing in or creating account you agree to our privacy policy</string>
    <string name="agree">agree</string>
    <string name="error_sign_in">Error please try later</string>
    <string name="no_network">no network!</string>
    <string name="auth_failed2">Authentication failed</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="btn_forgot_password">Forgot password</string>
    <string name="btn_link_to_login">Already have account? sign in now</string>
    <string name="pass_short">Password too short</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_email_address">Enter your email address</string>
    <string name="enter_emailb">Enter email</string>
    <string name="minimum_password">minimum length 6 characters required!</string>
    <string name="instructions">Password reset email has been sent with instructions to reset</string>
    <string name="retry">Error please try later</string>
    <string name="user_exist">user already exists!</string>
    <string name="lbl_forgot_password">Forgot passwrd</string>
    <string name="forgot_password_msg">Forgot my password</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_back">back</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Register</string>
    <string name="policy">Privacy policy</string>
    <string name="signed">Signed in</string>
    <string name="acc_sett">Account settings</string>
    <string name="deleted_profile">user deleted</string>
    <string name="hint_new_email">new Email</string>
    <string name="new_pass">new password</string>
    <string name="btn_change">change</string>
    <string name="btn_send">send</string>
    <string name="btn_remove">remove</string>
    <string name="change_password">change password</string>
    <string name="change_email">change email</string>
    <string name="send_password_reset_email">send password reset email</string>
    <string name="remove_user">remove user</string>
    <string name="btn_sign_out">sign out</string>
</resources>